Mudanças nos codigo